# Shapings_compacity_Fiji

./: CMakeLists.txt  README.md  README.txt
Nifti/: CMakeLists.txt
Nifti/include/: nifti1_io.h
exe/: README.txt
executables/: README.txt  shaping_elongL
sources/inc/: ConnectedComponents.hxx  FlatSE.h  Morphology.hxx  Types.h  cgraph.h  ragraph.h  shaping.h
sources/src/: cgraph.cpp  main.cpp  ragraph.cpp  shaping.cpp  utils.cpp
